<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>edu.kit.kastel.sdq.artemis</groupId>
    <artifactId>parent</artifactId>
    <version>2.3.0</version>
    <packaging>pom</packaging>
    <name>Artemis Eclipse Importer</name>

    <modules>
        <module>bundles</module>
        <module>features</module>
        <module>releng</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>17</java.version>
        <java.api.doc>https://docs.oracle.com/en/java/javase/17/docs/api/</java.api.doc>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <xtext.version>2.19.0</xtext.version>
        <tycho.version>2.7.0</tycho.version>
        <spotless.version>2.20.2</spotless.version>
    </properties>

    <repositories>
        <repository>
            <id>Eclipse</id>
            <url>http://download.eclipse.org/releases/2021-12</url>
            <layout>p2</layout>
        </repository>
        <repository>
            <id>Eclipse Orbit</id>
            <url>https://download.eclipse.org/tools/orbit/downloads/drops/R20210602031627/repository</url>
            <layout>p2</layout>
        </repository>
        <repository>
            <id>Eclipse P2 for External Deps</id>
            <url>https://kit-sdq.github.io/programming-lecture-eclipse-artemis.p2</url>
            <layout>p2</layout>
        </repository>
        <repository>
            <id>CheckStyle</id>
            <url>https://checkstyle.org/eclipse-cs-update-site</url>
            <layout>p2</layout>
        </repository>
    </repositories>

    <build>
        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-clean-plugin</artifactId>
                <version>3.1.0</version>
            </plugin>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-versions-plugin</artifactId>
                <version>${tycho.version}</version>
            </plugin>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-maven-plugin</artifactId>
                <version>${tycho.version}</version>
                <extensions>true</extensions>
            </plugin>
            <!-- Creates source versions of bundles -->
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-source-plugin</artifactId>
                <version>${tycho.version}</version>
                <executions>
                    <execution>
                        <id>plugin-source</id>
                        <goals>
                            <goal>plugin-source</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Creates source versions of features -->
            <plugin>
                <groupId>org.eclipse.tycho.extras</groupId>
                <artifactId>tycho-source-feature-plugin</artifactId>
                <version>${tycho.version}</version>
                <executions>
                    <execution>
                        <id>source-feature</id>
                        <goals>
                            <goal>source-feature</goal>
                        </goals>
                        <phase>package</phase>
                    </execution>
                </executions>
            </plugin>

            <!-- Correctly handles source features on p2 update site -->
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-p2-plugin</artifactId>
                <version>${tycho.version}</version>
                <executions>
                    <execution>
                        <id>attached-p2-metadata</id>
                        <goals>
                            <goal>p2-metadata</goal>
                        </goals>
                        <phase>package</phase>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-surefire-plugin</artifactId>
                <version>${tycho.version}</version>
                <configuration>
                    <includes>
                        <include>**/*Test.java</include>
                        <include>**/*Tests.java</include>
                    </includes>
                    <failIfNoTests>false</failIfNoTests>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>target-platform-configuration</artifactId>
                <version>${tycho.version}</version>
                <configuration>
                    <pomDependencies>consider</pomDependencies>
                    <executionEnvironment>JavaSE-17</executionEnvironment>
                    <environments>
                        <environment>
                            <os>linux</os>
                            <ws>gtk</ws>
                            <arch>x86_64</arch>
                        </environment>
                        <environment>
                            <os>win32</os>
                            <ws>win32</ws>
                            <arch>x86_64</arch>
                        </environment>
                        <environment>
                            <os>macosx</os>
                            <ws>cocoa</ws>
                            <arch>x86_64</arch>
                        </environment>
                    </environments>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>${spotless.version}</version>
                <configuration>
                    <java>
                        <eclipse>
                            <file>${maven.multiModuleProjectDirectory}/formatter.xml</file>
                        </eclipse>
                        <includes>src/**/*.java</includes>
                        <removeUnusedImports></removeUnusedImports>
                        <licenseHeader>
                            <file>${maven.multiModuleProjectDirectory}/license-header.txt</file>
                        </licenseHeader>
                    </java>
                    <pom>
                        <sortPom>
                            <encoding>UTF-8</encoding>
                            <keepBlankLines>true</keepBlankLines>
                            <indentBlankLines>false</indentBlankLines>
                            <nrOfIndentSpace>4</nrOfIndentSpace>
                        </sortPom>
                    </pom>
                    <ratchetFrom>origin/main</ratchetFrom>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>products</id>
            <modules>
                <module>bundles</module>
                <module>features</module>
                <module>releng</module>
            </modules>
        </profile>
    </profiles>
</project>
